--- a/style.css
+++ b/style.css
@@ -117,3 +117,11 @@ hr {
     color: white;
 }
 
+.footer .footer-heading{
+    font-weight: bold;
+    font-size: large;
+}
+
+.footer ul{
+    padding-inline-start: 0px;
+}
