--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --primary-color: #EF4444;
     --dark-gray: #6B7280;
     --off-white: #F3F4F6;
+    --light-primary: #FEE2E2;
 }
 
 body {
@@ -59,7 +60,7 @@ hr {
 
 .navigation .nav-brand{
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 2rem;
 }
 
 .navigation .nav-pills{
@@ -102,7 +103,7 @@ hr {
 }
 
 .ow{
-    background-color: var(--off-white);
+    background-color: var(--light-primary);
 }
 
 .footer{
@@ -119,9 +120,13 @@ hr {
 
 .footer .footer-heading{
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
 }
 
 .footer ul{
     padding-inline-start: 0px;
+}
+
+.footer .icon {
+    font-size: 30px;
 }
